--- a/RRR/package.json
+++ b/RRR/package.json
@@ -9,8 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.4",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
+    "framer-motion": "^10.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
