--- a/RRR/package.json
+++ b/RRR/package.json
@@ -13,9 +13,12 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
+    "firebase": "^9.18.0",
     "framer-motion": "^10.9.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
