--- a/RRR/package.json
+++ b/RRR/package.json
@@ -12,14 +12,26 @@
     "@chakra-ui/react": "^2.5.4",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@hookform/resolvers": "^3.0.0",
+    "@mdx-js/react": "^2.3.0",
+    "@mui/material": "^5.11.15",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
+    "emotion": "^11.0.0",
+    "emotion-icons": "^3.27.0",
     "firebase": "^9.18.0",
+    "formik": "^2.2.9",
     "framer-motion": "^10.9.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.9.0",
+    "react-router-dom": "^6.9.0",
+    "react-scripts": "^5.0.1",
+    "theme-ui": "^0.15.5",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
