--- a/RRR/package.json
+++ b/RRR/package.json
@@ -24,6 +24,7 @@
     "firebase": "^9.18.0",
     "formik": "^2.2.9",
     "framer-motion": "^10.9.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
@@ -31,6 +32,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "theme-ui": "^0.15.5",
+    "toastr": "^2.1.4",
     "yup": "^1.0.2"
   },
   "devDependencies": {
