added tailwind and nav bar with chats locally

--- a/api/Pipfile
+++ b/api/Pipfile
@@ -13,6 +13,13 @@ djangorestframework = "*"
 django-cors-headers = "*"
 djangorestframework-jwt = "*"
 djangorestframework-simplejwt = "*"
+channels = "*"
+asgiref = "*"
+
+gunicorn = "*"
+dj-database-url = "*"
+daphne = "*"
+channels-redis = "*"
 
 [dev-packages]
 
