--- a/RRR/package.json
+++ b/RRR/package.json
@@ -12,9 +12,19 @@
     "@chakra-ui/react": "^2.5.4",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@headlessui/react": "^1.6.1",
+    "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^3.0.0",
     "@mdx-js/react": "^2.3.0",
     "@mui/material": "^5.11.15",
+    "@tailwindcss/forms": "^0.5.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^16.11.35",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
@@ -25,20 +35,28 @@
     "formik": "^2.2.9",
     "framer-motion": "^10.9.2",
     "jwt-decode": "^3.1.2",
-    "react": "^18.2.0",
+    "react": "^18.1.0",
     "react-bootstrap": "^2.7.2",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.1.0",
+    "react-hotkeys-hook": "^3.4.6",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router": "^6.9.0",
-    "react-router-dom": "^6.9.0",
-    "react-scripts": "^5.0.1",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "react-use-websocket": "^4.1.0",
     "theme-ui": "^0.15.5",
     "toastr": "^2.1.4",
+    "typescript": "^4.6.4",
+    "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
